--- a/doc/callers.org
+++ b/doc/callers.org
@@ -1464,7 +1464,7 @@ int B::b() {
 
    So the main challenge is to extract from the existing database the information that is really important for helping the end-user to achieve his analysis goal, and to ignore whatever else.
 
-   This is the purpose of the "function_callers_to_dot" backend implemented in OCAML and used in step 7.
+   This is the purpose of the "function_calls_to_dot" backend implemented in OCAML and used in step 7.
 
    The basic usage of this backend is to lookup for the definition of a specific function to be analyzed, taken as input,
    and then to navigate through either all its function callers or all its function callees.
@@ -1476,10 +1476,10 @@ int B::b() {
    In case you choose the "c2c" value, it means that the generated dot graph will draw a graph of all possible function call paths between one caller function and one callee function.
 
    # +BEGIN_SRC text verbatim
-> function_callers_to_dot.native --help
+> function_calls_to_dot.native --help
 Parses function's callers and/or callees from callers's generated json files (direction=callers|callees|c2c)
 
-  function_callers_to_dot.native DIRECTION FCT1_JSON FCT1_ID FCT1_SIGN [[OTHER ...]]
+  function_calls_to_dot.native DIRECTION FCT1_JSON FCT1_ID FCT1_SIGN [[OTHER ...]]
 
 More detailed information
 === flags ===
@@ -1618,14 +1618,13 @@ and add the path work_dir/callgraph to the PATH environment variable.
   | Install OPAM in 2 minutes       | https://github.com/ocaml/opam/wiki/Quick_Install |
   | scan-build                      | http://clang-analyzer.llvm.org/scan-build.html   |
    #+END_SRC
-* Todo list
+* TODO Todo list
 ** Support for inheritance
 *** json file extension [0/2]
     0. [ ] add a *record* keyword extension (record=struct|class|union)
     1. [ ] add a *virtual* keyword extension 
     2. [ ] add an *inheritance* keyword extension
 *** extended json formats in the reference example
-
 
 *** C++ frontend [/]
 **** step 0. _to add record definition (required for frontend, optional for backend)_
@@ -1748,4 +1747,9 @@ and add the path work_dir/callgraph to the PATH environment variable.
        with a list of function call, one per derived method
 
     2. replaces the mother class name by the child class name in methods to link the caller and callee.
+
+*** TODO [#A] Add an OCAML backend to build class inheritance graphs
+    DEADLINE: <2015-10-22 jeu.>
+**** First begin by listing all records without looking at the inheritance links
+**** Then add the inheritance links
 
