Reordering of argumentation.

--- a/doc/callers.key.concepts.org
+++ b/doc/callers.key.concepts.org
@@ -1,7 +1,15 @@
 #+AUTHOR: Hugues Balp
+#+DATE: [2015-10-22 jeu.]
 #+TITLE: 
 #+COMMENT: OH: what is important is the analysis process
 #+COMMENT: OH: show the genericity of the approach
+
+* Key differentiators & innovation			 :key:differentiator:
+  1. *agile and goal-oriented model abstraction process from source code*
+     => capability to generate customizable and resusable abstract views from source code
+
+  2. *robust* and *scalable* source code analysis solution for large-scale software
+     => it relies on a mature and up-to-date open-source compiler: *clang/LLVM*
 
 * DONE Areas of Application				       :applications:
   1. _global or focused understanding of complex software_
@@ -11,21 +19,13 @@
      => detection of vulnerabilities and extraction of attack vectors
 
 * User benefits						      :user:benefits:
-  1. *Get the good abstraction at the right moment*
+  1. *Trustable model abstractions* of complexe software implementations
+     the models extracted from the source code are *correct by construction*
+  2. *Get the good abstraction at the right moment*
      Help the end-users to _focus on their current engineering objectives_
      _Hide all the other details_ of the existing solution.
-  2. *Open and user-extensible* source code analysis solution
+  3. *Open and user-extensible* source code analysis solution
      Analysis results are stored incrementally in a json customizable open-format
-  3. *trustable model abstractions* of complexe software implementations
-     the models extracted from the source code are *correct by construction*
-
-* Key differentiators & innovation			 :key:differentiator:
-  1. *agile and goal-oriented model abstraction process from source code*
-     => capability to generate customizable and resusable abstract views from source code
-
-  2. *robust* and *scalable* source code analysis solution for large-scale software
-     => it relies on a mature and up-to-date open-source compiler: *clang/LLVM*
-
 * Comparison with concurrent tools				:competitors:
 
   Concurrent tools are able either to:
