Added *source code* -> *DSL* differentiator.

--- a/doc/callers.key.concepts.org
+++ b/doc/callers.key.concepts.org
@@ -4,13 +4,15 @@
 #+COMMENT: OH: what is important is the analysis process
 #+COMMENT: OH: show the genericity of the approach
 
-* Key differentiators & innovation			 :key:differentiator:
-  1. *agile and goal-oriented model abstraction process from source code*
-     => capability to generate customizable and resusable abstract views from source code
-
-  2. *robust* and *scalable* source code analysis solution for large-scale software
+* DONE Key differentiators & innovation			 :key:differentiator:
+  1. *capability to generate domain-specific models from source code*
+     
+  2. *agile and goal-oriented model abstraction process from source code*
+     => capability to generate customizable and reusable abstract views from source code
+     
+  3. *robust* and *scalable* source code analysis solution for large-scale software
      => it relies on a mature and up-to-date open-source compiler: *clang/LLVM*
-
+     
 * DONE Areas of Application				       :applications:
   1. _global or focused understanding of complex software_
   2. _architecture extraction and refactoring of legacy software_
@@ -18,7 +20,7 @@
   3. _software security risks analysis_
      => detection of vulnerabilities and extraction of attack vectors
 
-* User benefits						      :user:benefits:
+* DONE User benefits					      :user:benefits:
   1. *Trustable model abstractions* of complexe software implementations
      the models extracted from the source code are *correct by construction*
   2. *Get the good abstraction at the right moment*
@@ -26,8 +28,7 @@
      _Hide all the other details_ of the existing solution.
   3. *Open and user-extensible* source code analysis solution
      Analysis results are stored incrementally in a json customizable open-format
-* Comparison with concurrent tools				:competitors:
-
+* DONE Comparison with concurrent tools				:competitors:
   Concurrent tools are able either to:
 
   1. extract low-level models from source code, without abstraction capability
@@ -36,7 +37,9 @@
   2. produce some proprietary abstracted views with the help of the end-user
      those views are not importable within modellers for further model refactoring
      example tools: Structure101, Lattix or Understand
-     
+
+  But they are not able to generate directly reusable abstract models from source code.
+  This is precisely the heart of the technology we offer.
      
 * Method:							     :method:
 ** architecture view extraction process				      :steps:
