Added foreseen extensions.

--- a/doc/callers.key.concepts.org
+++ b/doc/callers.key.concepts.org
@@ -41,5 +41,13 @@
   But they are not able to generate directly reusable abstract models from source code.
   This is precisely the heart of the technology we offer.
      
-* Method:							     :method:
+* Tool-up process						     :method:
 ** architecture view extraction process				      :steps:
+* DONE Foreseen extensions
+  1. possibility to *control the software refactoring process* with the help of:
+     - the input source code base
+     - a model of the software architecture before rearchitecting
+     - a model of the software architecture after rearchitecting
+  2. the principle of this tool is *extensible to other languages* than C and C++
+
+     
