Added the basic idea.

--- a/doc/callers.key.concepts.org
+++ b/doc/callers.key.concepts.org
@@ -4,6 +4,9 @@
 #+COMMENT: OH: what is important is the analysis process
 #+COMMENT: OH: show the genericity of the approach
 
+* DONE Basic idea						 :basic:idea:
+  Offer an open-source modular and customizable tooled-up process 
+  for generating abstract user-centered models from source code
 * DONE Key differentiators & innovation			 :key:differentiator:
   1. *capability to generate domain-specific models from source code*
      
@@ -12,6 +15,7 @@
      
   3. *robust* and *scalable* source code analysis solution for large-scale software
      => it relies on a mature and up-to-date open-source compiler: *clang/LLVM*
+     => 
      
 * DONE Areas of Application				       :applications:
   1. _global or focused understanding of complex software_
@@ -41,13 +45,26 @@
   But they are not able to generate directly reusable abstract models from source code.
   This is precisely the heart of the technology we offer.
      
-* Tool-up process						     :method:
-** architecture view extraction process				      :steps:
-* DONE Foreseen extensions
+* TODO Current status						     :status:
+** feasibility demonstrated in form of two complementary prototypes :feasibility:
+   1. the *fccm* prototype able to _generate component architecture views from C source code (2014)_
+      limitations:
+      - 
+      - 
+   2. the *callers* prototype able to _ (2015)_
+      limitations:
+      - unix-native, does not yet support windows environments
+      - 
+** support the analysis of C and C++ languages		   :language:support:
+** 
+* DONE Foreseen extensions					 :extensions:
   1. possibility to *control the software refactoring process* with the help of:
      - the input source code base
      - a model of the software architecture before rearchitecting
      - a model of the software architecture after rearchitecting
   2. the principle of this tool is *extensible to other languages* than C and C++
 
-     
+* TODO Detailed tool-up process					    :process:
+** architecture view extraction process				      :steps:
+** 
+
