Minor documentation modif.

--- a/doc/callers.key.concepts.org
+++ b/doc/callers.key.concepts.org
@@ -126,7 +126,7 @@
 
 ** DONE Step-by-step architecture view extraction process from source code :reverse:engineering:steps:
 
-*** Case 1: the user expected component view is already known
+*** Case 1: the user code and expected component view are already known
 
   - step 1: _in this particular case, the user can formalize a structured mapping description of the targetted component view wrt the existing legacy software architecture_
      this mapping description should respect the format accepted as input of the model extraction tool
@@ -150,7 +150,7 @@
 
   - step 5: _the user validates the final mapping description_
 
-*** Case 2: the user expected component view is not well known in advance
+*** Case 2: the user code and expected component view are not well known in advance
 
     In this scenario, the process is quite the same except the absence of an initial user mapping description (no step 1)
     and the fact that steps 2, 3 and 4 can be reexecuted several times in an iterative fashion in order for the end-user
