--- a/doc/callers.org
+++ b/doc/callers.org
@@ -1750,6 +1750,7 @@ and add the path work_dir/callgraph to the PATH environment variable.
 
 *** TODO [#A] Add an OCAML backend to build class inheritance graphs
     DEADLINE: <2015-10-22 jeu.>
-**** First begin by listing all records without looking at the inheritance links
-**** Then add the inheritance links
+**** DONE First begin by listing all records without looking at the inheritance links
+**** DONE Then add the inheritance links
+**** Add the OCAML backend to generate class diagrams
 
