--- a/doc/callers.org
+++ b/doc/callers.org
@@ -1618,9 +1618,9 @@ and add the path work_dir/callgraph to the PATH environment variable.
   | Install OPAM in 2 minutes       | https://github.com/ocaml/opam/wiki/Quick_Install |
   | scan-build                      | http://clang-analyzer.llvm.org/scan-build.html   |
    #+END_SRC
-* TODO Todo list
-** Support for inheritance and virtualization [2/3]
-*** json file extension [3/3]
+* TODO Todo list [/]
+** Support for inheritance and virtualization [3/6]
+*** DONE json file extension [3/3]
     1. [X] add a *record* type (record=struct|class|union)
     2. [X] add a *virtuality* type 
     3. [X] add an *inheritance* type
@@ -1752,5 +1752,5 @@ and add the path work_dir/callgraph to the PATH environment variable.
 **** DONE Then add the *inheritance* links
 **** DONE Add the *add_inherited* OCAML backend to complete declared base classes with their list of children's classes
 **** DONE Add an *classes_to_dot* OCAML backend to generate class diagrams
-
-
+*** TODO Add the *add_definitions* OCAML backen
+*** TODO Add the *add_redefinitions* OCAML backend
