--- a/doc/callers.org
+++ b/doc/callers.org
@@ -1619,7 +1619,7 @@ and add the path work_dir/callgraph to the PATH environment variable.
   | scan-build                      | http://clang-analyzer.llvm.org/scan-build.html   |
    #+END_SRC
 * TODO Todo list [/]
-** Support for inheritance and virtualization [3/6]
+** Support for inheritance and virtualization [3/7]
 *** DONE json file extension [3/3]
     1. [X] add a *record* type (record=struct|class|union)
     2. [X] add a *virtuality* type 
@@ -1752,5 +1752,9 @@ and add the path work_dir/callgraph to the PATH environment variable.
 **** DONE Then add the *inheritance* links
 **** DONE Add the *add_inherited* OCAML backend to complete declared base classes with their list of children's classes
 **** DONE Add an *classes_to_dot* OCAML backend to generate class diagrams
-*** TODO Add the *add_definitions* OCAML backen
+*** TODO Add a declaration field to defined function
+    For enabling navigation from a *method* towards the declaration of the class
+    exemple: method ::Newly::Added::D::c() of test_local_callgraph_several_files
+*** TODO Add the *add_definitions* OCAML backend
 *** TODO Add the *add_redefinitions* OCAML backend
+    
